--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -32,11 +32,11 @@
                             Compte
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            
+
                             <a class="dropdown-item" href="/login">Connexion</a>
                             <a class="dropdown-item" href="/register">Créer un compte</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                            <a class="dropdown-item"{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
                 <a href="{{ path('fos_user_security_logout') }}">
                     {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
@@ -78,16 +78,7 @@
         </div>
     </nav>
 {% endblock %}
-        <div>
-            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-                <a href="{{ path('fos_user_security_logout') }}">
-                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                </a>
-            {% else %}
-                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-            {% endif %}
-        </div>
+       
 
         {% if app.request.hasPreviousSession %}
             {% for type, messages in app.session.flashbag.all() %}
@@ -98,7 +89,7 @@
                 {% endfor %}
             {% endfor %}
         {% endif %}
-    <section class="testou" class="testou">
+    <section class="testou">
         <div id="pute" name="pute">
             {% block fos_user_content %}
                
