--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -9,10 +9,10 @@
         </button>
         <div class="row justify-content-center">
             <div class="collapse navbar-collapse col" id="navbarSupportedContent" >
-                <form class="form-inline">
-                    <input class="form-control col-6" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+                 {{ form_start(form) }}
+            <p> {{ form_widget(form) }} </p> 
+                {{ form_end(form) }}
+                
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
