--- a/web/asset/css/style.css
+++ b/web/asset/css/style.css
@@ -6,17 +6,19 @@ body {
     background-color:white;
 }
 #pute {
+    margin-top: 2%;
+    margin-bottom:2%;
+     margin-left:30%;
 
-  margin-left:30%;
-  margin-top:15%;
-  color:white;
 }
 
 .testou {
-background-color: black;
-margin-top: 5%;
-padding-top:5%;
-margin-right: -5%;
+    box-sizing: border-box;
+width: 100%;
+border: solid #ffdc6e 10px;ffdc6e
+padding: 10px;
+
+
 }
 @media (max-width: 480px) {
     #pute {
