Deplacement des twig pour CSS

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -89,13 +89,12 @@
                 {% endfor %}
             {% endfor %}
         {% endif %}
-    <section class="testou">
-        <div id="pute" name="pute">
+
+        <div id="LoginRegister" name="LoginRegister">
             {% block fos_user_content %}
                
             {% endblock fos_user_content %}
         </div>
-    </div>
-</section>
+
     </body>
 </html>
