--- a/web/asset/css/style.css
+++ b/web/asset/css/style.css
@@ -1,21 +1,30 @@
 body {
     font-family: Helvetica;
 }
-#salope {
-    padding:20px;
-    background-color:white;
-}
+
 #pute {
     margin-top: 2%;
     margin-bottom:2%;
      margin-left:30%;
+     margin-right:30%;
 
 }
-
+.LoginForm {
+    padding:20px;
+    background-color:white;
+        margin-top:4%;
+margin-left: 40%;
+    box-sizing: border-box;
+margin-right:45%;
+border: solid #ffdc6e 10px;
+text-align: center;
+padding-left:20px;
+padding-bottom: 10px;
+}
 .testou {
     box-sizing: border-box;
 width: 100%;
-border: solid #ffdc6e 10px;ffdc6e
+border: solid #ffdc6e 10px;
 padding: 10px;
 
 
