--- a/web/asset/css/style.css
+++ b/web/asset/css/style.css
@@ -1,5 +1,37 @@
 body {
+
+    background-color: #f8f9fa !important;
+    font-size:15px;
+    display:inline;
     font-family: Helvetica;
+}
+
+#recherche {
+    text-align: center;
+    float: left;
+width: 690px;
+}
+
+#Filtre {
+    border-box:1px;
+    width: 220px;
+    float:left;
+
+}
+#searchPage {
+    overflow: hidden;
+    margin-top: 30px;
+    border-top: 1px solid #bbb;
+    padding-top: 20px;
+}
+#search {
+    background: #fff;
+    width: 978px;
+    margin: 0 auto 5px;
+    padding-top: 17px;
+    border-right: 1px solid #e0e0e0;
+    border-left: 1px solid #e0e0e0;
+    cursor: default;
 }
 
 #pute {
