Little design, pretty shitty

--- a/app/Resources/views/default/results.html.twig
+++ b/app/Resources/views/default/results.html.twig
@@ -8,7 +8,7 @@
 	<div id="SearchPage">
 <div id="Filtre">
 	<p>testou
-	testoutestoutestoutestoutestoutestou
+	testoutestoutestou
 testoutestoutestou
 testoutestoutestou
 testoutestoutestou
@@ -18,7 +18,7 @@ testoutestoutestou
 testoutestoutestou
 testoutestoutestou
 testoutestoutestou
-testoutestoutestoutestoutestoutestou
+testoutestoutestou
 testoutestoutestou
 testoutestoutestou
 testoutestoutestou
@@ -40,7 +40,6 @@ testoutestoutestou
 testoutestoutestou
 testoutestoutestou
 testoutestoutestou
-testoutestoutestoutestoutestoutestou
 testoutestoutestou
 testoutestoutestou
 testoutestoutestou
@@ -49,7 +48,8 @@ testoutestoutestou
 testoutestoutestou
 testoutestoutestou
 testoutestoutestou
-testoutestoutestoutestoutestoutestou
+testoutestoutestou
+testoutestoutestou
 testoutestoutestou
 testoutestoutestou
 
