--- a/web/asset/css/style.css
+++ b/web/asset/css/style.css
@@ -7,15 +7,20 @@ body {
 }
 
 #recherche {
+    margin-left: 20px;
     text-align: center;
     float: left;
 width: 690px;
+    box-sizing: border-box;
+border: solid #ffdc6e 10px;
 }
 
 #Filtre {
-    border-box:1px;
     width: 220px;
     float:left;
+        box-sizing: border-box;
+border: solid #ffdc6e 10px;
+}
 
 }
 #searchPage {
@@ -25,7 +30,6 @@ width: 690px;
     padding-top: 20px;
 }
 #search {
-    background: #fff;
     width: 978px;
     margin: 0 auto 5px;
     padding-top: 17px;
@@ -40,6 +44,10 @@ width: 690px;
      margin-left:30%;
      margin-right:30%;
 
+}
+
+#form_Recherche{
+    background-color:green;
 }
 .LoginForm {
     padding:20px;
