--- a/app/Resources/views/default/memory.html.twig
+++ b/app/Resources/views/default/memory.html.twig
@@ -1,18 +1,21 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Recherche{% endblock %}
+{% block title %}Mémoire{% endblock %}
 
 {% block body %}
 
 
-<h1>Vos recherches</h1>
-{% for vf in product %}            
+<h1>Barrettes de mémoire:</h1>
+{% for vf in memory %}            
     <li><strong> Produit {{ vf.designation }} Fabriqué par {{ vf.brand }} : </strong></li>
     <li> - Prix d'achat : {{vf.buyingPrice}} Euros / Prix de vente : {{vf.sellingPrice}} Euros</li>
     <li>- Quantité disponible : {{vf.quantity}}</li>
 {% endfor %}
 
 
+{% endblock %}
+{% block stylesheets %}
+<style>
 
-
+</style>
 {% endblock %}
