--- a/app/Resources/views/default/fileProduct.html.twig
+++ b/app/Resources/views/default/fileProduct.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    {% include 'default/menu.html.twig' %}
+    {% include '/default/menu.html.twig' %}
 
     {% for p in product %}
     {{ dump(p) }}
