--- a/app/Resources/views/default/Userprofile.html.twig
+++ b/app/Resources/views/default/Userprofile.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    {% include 'menu.html.twig' %}
+    {% include '/default/menu.html.twig' %}
 
     {% for u in user %}
     {{ dump(u) }}
