--- a/app/Resources/views/default/results.html.twig
+++ b/app/Resources/views/default/results.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Recherche{% endblock %}
 
 {% block body %}
-{% include 'menu.html.twig' %}
+{% include '/default/menu.html.twig' %}
 <section id="search">
 	<div id="SearchPage">
 <div id="Filtre">
