--- a/app/Resources/views/default/menu.html.twig
+++ b/app/Resources/views/default/menu.html.twig
@@ -25,7 +25,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             {% if is_granted("IS_AUTHENTICATED_FULLY") %}
-                             <a class="dropdown-item" href="/">Votre compte</a>
+                             <a class="dropdown-item" href="{{ path('user_profile', { 'user': app.user.id }) }}">Votre compte</a>
                              {% else %}
                              <a class="dropdown-item" href="/login" id="connexion">Connexion</a>
                              <a class="dropdown-item" href="/register">Créer un compte</a>
