--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,33 +2,46 @@
 
 {% block body %}
 
- 
-   
-
 <h1>Les promos tombées du camion !</h1>
-
     <h2>Ventes flash</h2>
-{% for vf in venteflash %}            
-    <li><strong> Produit <a href="fiche/{{ vf.designation }}">{{ vf.designation }}</a>  Fabriqué par {{ vf.brand }} : </strong></li>
-    <li> - Prix d'achat : {{vf.buyingPrice}} Euros / Prix de vente : {{vf.sellingPrice}} Euros</li>
-    <li>- Quantité disponible : {{vf.quantity}}</li>
-    <li>{{ dump(vf) }}</li>
+
+
+
+
+
+{% for vf in venteflash %}
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src={{ vf.medias.first.url }} alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title"><a href="fiche/{{ vf.designation }}">{{ vf.designation }}</a></h5>
+            <p class="card-text">Fabriqué par {{ vf.brand }}<br>
+                Prix de vente : {{vf.sellingPrice}} Euros</p>
+        </div>
+    </div>
 {% endfor %}
 
     <h2>Promos</h2>
-{% for p in promo %}            
-    <li><strong> Produit <a href="fiche/{{ p.designation }}">{{ p.designation }}</a> Fabriqué par {{ p.brand }} : </strong></li>
-    <li> - Prix d'achat : {{p.buyingPrice}} Euros / Prix de vente : {{p.sellingPrice}} Euros</li>
-    <li>- Quantité disponible : {{p.quantity}}</li>
-    <li>{{ dump(p) }}</li>
+{% for p in promo %}
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src={{ p.medias.first.url }} alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title"><a href="fiche/{{ p.designation }}">{{ p.designation }}</a></h5>
+            <p class="card-text">Fabriqué par {{ p.brand }}<br>
+                Prix de vente : {{p.sellingPrice}} Euros</p>
+        </div>
+    </div>
 {% endfor %}
 
     <h2>Meilleurs ventes</h2>
-{% for mv in topvente %}            
-    <li><strong> Produit <a href="fiche/{{ mv.designation }}">{{ mv.designation }}</a> Fabriqué par {{ mv.brand }} : </strong></li>
-    <li> - Prix d'achat : {{mv.buyingPrice}} Euros / Prix de vente : {{mv.sellingPrice}} Euros</li>
-    <li>- Quantité disponible : {{mv.quantity}}</li>
-    <li>{{ dump(mv) }}</li>
+{% for mv in topvente %}
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src={{ mv.medias.first.url }} alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title"><a href="fiche/{{ mv.designation }}">{{ mv.designation }}</a></h5>
+            <p class="card-text">Fabriqué par {{ mv.brand }}<br>
+                Prix de vente : {{mv.sellingPrice}} Euros</p>
+        </div>
+    </div>
 {% endfor %}
 
 {% endblock %}
