--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,11 +2,9 @@
 
 {% block body %}
 
- 
-   
-
-<h1>Les promos tombées du camion !</h1>
-
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
     <h2>Ventes flash</h2>
 {% for vf in venteflash %}            
     <li><strong> Produit <a href="fiche/{{ vf.designation }}">{{ vf.designation }}</a>  Fabriqué par {{ vf.brand }} : </strong></li>
@@ -15,6 +13,8 @@
     <li>{{ dump(vf) }}</li>
 {% endfor %}
 
+    </div>
+    <div class="col-sm">
     <h2>Promos</h2>
 {% for p in promo %}            
     <li><strong> Produit <a href="fiche/{{ p.designation }}">{{ p.designation }}</a> Fabriqué par {{ p.brand }} : </strong></li>
@@ -22,6 +22,8 @@
     <li>- Quantité disponible : {{p.quantity}}</li>
     <li>{{ dump(p) }}</li>
 {% endfor %}
+    </div>
+    <div class="col-sm">
 
     <h2>Meilleurs ventes</h2>
 {% for mv in topvente %}            
@@ -30,6 +32,12 @@
     <li>- Quantité disponible : {{mv.quantity}}</li>
     <li>{{ dump(mv) }}</li>
 {% endfor %}
+    </div>
+  </div>
+</div>
+
+
+
 
 {% endblock %}
 
