--- a/app/Resources/views/default/results.html.twig
+++ b/app/Resources/views/default/results.html.twig
@@ -3,10 +3,10 @@
 {% block title %}Recherche{% endblock %}
 
 {% block body %}
-
 <section id="search">
-	<div id="SearchPage">
-<div id="Filtre">
+	<div class="container">
+	<div id="SearchPage" class="row">
+<div id="Filtre" class="col-2">
 	<p>testou
 	testoutestoutestou
 testoutestoutestou
@@ -56,7 +56,7 @@ testoutestoutestou
 
 testoutestoutestoutestou</p>
 </div>
-<div id="recherche">
+<div id="recherche" class="col-8">
 
 {% for vf in product %}     
 <div id="SearchPicture"> </div>       
@@ -64,6 +64,7 @@ testoutestoutestoutestou</p>
     <div id="SearchBuyingPrice"> - Prix d'achat : {{vf.buyingPrice}} Euros / Prix de vente : {{vf.sellingPrice}} Euros </div>
     <div id ="SearchQuantity"> Quantité disponible : {{vf.quantity}} </div>
 {% endfor %}
+</div>
 </div>
 </div>
 </section>
