--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col">
     <h2>Ventes flash</h2>
 {% for vf in venteflash %}            
     <li><strong> Produit <a href="fiche/{{ vf.designation }}">{{ vf.designation }}</a>  Fabriqué par {{ vf.brand }} : </strong></li>
@@ -12,9 +12,10 @@
     <li>- Quantité disponible : {{vf.quantity}}</li>
     <li>{{ dump(vf) }}</li>
 {% endfor %}
-
+</div>
     </div>
-    <div class="col-sm">
+    <div class="row">
+    <div class="col">
     <h2>Promos</h2>
 {% for p in promo %}            
     <li><strong> Produit <a href="fiche/{{ p.designation }}">{{ p.designation }}</a> Fabriqué par {{ p.brand }} : </strong></li>
@@ -23,7 +24,9 @@
     <li>{{ dump(p) }}</li>
 {% endfor %}
     </div>
-    <div class="col-sm">
+</div>
+<div class="row">
+    <div class="col">
 
     <h2>Meilleurs ventes</h2>
 {% for mv in topvente %}            
@@ -33,6 +36,7 @@
     <li>{{ dump(mv) }}</li>
 {% endfor %}
     </div>
+</div>
   </div>
 </div>
 
