--- a/app/Resources/views/default/card.html.twig
+++ b/app/Resources/views/default/card.html.twig
@@ -1,8 +1,8 @@
 <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="" alt="Card image cap">
     <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title"><a href="fiche/{{ p.designation }}">{{ p.designation }}</a></h5>
+        <p class="card-text">Fabriqué par {{ p.brand }}<br>
+            Prix de vente : {{p.sellingPrice}} Euros</p>
     </div>
 </div>
