--- a/app/Resources/views/default/card.html.twig
+++ b/app/Resources/views/default/card.html.twig
@@ -4,5 +4,6 @@
         <h5 class="card-title"><a href="fiche/{{ p.designation }}">{{ p.designation }}</a></h5>
         <p class="card-text">Fabriqué par {{ p.brand }}<br>
             Prix de vente : {{p.sellingPrice}} Euros</p>
+        <a href="..." class="btn btn-primary">Ajouter dans le panier</a>
     </div>
 </div>
