Adding moar css
yes boi

--- a/app/Resources/views/default/cpu.html.twig
+++ b/app/Resources/views/default/cpu.html.twig
@@ -4,14 +4,53 @@
 
 {% block body %}
 
-
+<div class="container">
+	<div id="SearchPage" class="row">
+	<div id="Filtre" class="col-2">
+	<p>LA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeee
+	LA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeeeLA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeeeLA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeeeLA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeee</p>
+</div>
+	<div id="recherche" class="col-8">
 <h1>Processeurs:</h1>
 {% for vf in cpu %}            
     <li><strong> Produit {{ vf.designation }} Fabriqué par {{ vf.brand }} : </strong></li>
     <li> - Prix d'achat : {{vf.buyingPrice}} Euros / Prix de vente : {{vf.sellingPrice}} Euros</li>
     <li>- Quantité disponible : {{vf.quantity}}</li>
-     <li>{{ dump(vf) }}</li>
 {% endfor %}
+ </div>
+</div>
+</div>
+
 
 
 {% endblock %}
