--- a/app/Resources/views/default/results.html.twig
+++ b/app/Resources/views/default/results.html.twig
@@ -7,54 +7,38 @@
 	<div class="container">
 	<div id="SearchPage" class="row">
 <div id="Filtre" class="col-2">
-	<p>testou
-	testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-testoutestoutestou
-
-
-testoutestoutestoutestou</p>
+	<p>LA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeee
+	LA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeeeLA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeeeLA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeeeLA BARRRRRRRRRRRRRRE DE FILTRE
+		barre de filtre
+		filtrou barr
+		filtrefiltrefiltre
+		a turtle made it to the water
+		bar de flitre 
+		barrrre de filtreeeeeee</p>
 </div>
 <div id="recherche" class="col-8">
 
