--- a/app/Resources/views/default/memory.html.twig
+++ b/app/Resources/views/default/memory.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 
 <div class="container">
+	<h1>Barrettes de mémoire:</h1>
 	<div id="SearchPage" class="row">
 	<div id="Filtre" class="col-2">
 	<p>LA BARRRRRRRRRRRRRRE DE FILTRE
@@ -41,14 +42,16 @@
 		barrrre de filtreeeeeee
 	</p>
 </div>
+
 	<div id="recherche" class="col-8">
-<h1>Barrettes de mémoire:</h1>
+
 {% for vf in memory %}            
-    <li><strong> Produit {{ vf.designation }} Fabriqué par {{ vf.brand }} : </strong></li>
-    <li> - Prix d'achat : {{vf.buyingPrice}} Euros / Prix de vente : {{vf.sellingPrice}} Euros</li>
-    <li>- Quantité disponible : {{vf.quantity}}</li>
-    {% endfor %}
- </div>
+    <div id="SearchPicture"> </div>       
+   <div id="SearchProductName"> <strong> Produit {{ vf.designation }} Fabriqué par {{ vf.brand }} : </strong> </div>
+    <div id="SearchBuyingPrice"> - Prix d'achat : {{vf.buyingPrice}} Euros / Prix de vente : {{vf.sellingPrice}} Euros </div>
+    <div id ="SearchQuantity"> Quantité disponible : {{vf.quantity}} </div>
+{% endfor %}
+</div>
 </div>
 </div>
 
