--- a/app/Resources/views/default/menu.html.twig
+++ b/app/Resources/views/default/menu.html.twig
@@ -1,22 +1,15 @@
 
 {% block body %}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
-     
-
-
-             <div id="menu">
-    
-
-            
-        <div class="row justify-content-center">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">  
+        <div class="row col-6">
             <div class="collapse navbar-collapse col" id="navbarSupportedContent" >
                   <a class="navbar-brand" href="/"><img src="{{ asset('asset/images/logo.png') }}" alt=""></a>
                  {{ form_start(form, { 'attr': {'action': path('results')} }) }}
                 {{ form_widget(form) }}
                 {{ form_end(form) }}
-                
-                <ul class="navbar-nav mr-auto">
+                </div>
+                <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Compte
@@ -72,7 +65,7 @@
             </div>
         </div>
     </nav>
-</div>
+
 {% endblock %}
 {% block stylesheets %}
     <style>
