--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -13,7 +13,7 @@
     <input class="form-control col-6" type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
 
     <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input style="padding-bottom:10px;" class="form-control col-6" type="password" id="password" name="_password" required="required" autocomplete="current-password" />
+    <input  class="form-control col-6" type="password" id="password" name="_password" required="required" autocomplete="current-password" />
 
     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
     <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
