--- a/web/asset/css/style.css
+++ b/web/asset/css/style.css
@@ -1,24 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    outline: none;
-}
 
-body {
-    width:75%;
-    background-color:  #f8f9fa !important;
-    font-size:11px;
-    display:inline;
-    font-family: Arial;
-}
-#menu {
-
-    margin: 0 auto;
-    background-color:  #f8f9fa;
-    position: relative;
-
-}
 #SearchProductName {
     padding-top:5px;
 }
@@ -82,4 +62,16 @@ padding: 10px;
 
 .border {
     border-bottom: solid #ffdc6e 10px; 
+}
+
+#Profil {
+    margin-top:4%;
+    display:flex;
+margin-left: 40%;
+    box-sizing: border-box;
+margin-right:45%;
+border: solid #ffdc6e 10px;
+text-align: center;
+padding-left:20px;
+padding-bottom: 10px;
 }
