--- a/app/Resources/views/default/motherboard.html.twig
+++ b/app/Resources/views/default/motherboard.html.twig
@@ -44,7 +44,8 @@
 	<div id="recherche" class="col-8">
 
 {% for vf in motherboard %}            
-    <div id="SearchPicture"> </div>       
+    <div id="SearchPicture"> </div>   <a href="fiche/{{ vf.designation }}">{{ vf.designation }}</a>    
+    
    <div id="SearchProductName"> <strong> Produit {{ vf.designation }} Fabriqué par {{ vf.brand }} : </strong> </div>
     <div id="SearchBuyingPrice"> - Prix d'achat : {{vf.buyingPrice}} Euros / Prix de vente : {{vf.sellingPrice}} Euros </div>
     <div id ="SearchQuantity"> Quantité disponible : {{vf.quantity}} </div>
@@ -52,7 +53,6 @@
 </div>
  </div>
 </div>
-
 
 
 
