--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <link href="{{ asset('asset/css/style.css') }}" rel="stylesheet" >
         <link rel="icon" type="image/x-icon" href="{{ asset('asset/images/favicon.png') }}" />
-        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('asset/js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('asset/js/panier.js') }}"></script>
         
          {{ render(controller(
         'AppBundle:Default:menu'
