--- a/app/Resources/views/default/menu.html.twig
+++ b/app/Resources/views/default/menu.html.twig
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">  
         <div class="row col-6">
             <div class="collapse navbar-collapse col" id="navbarSupportedContent" >
-                  <a class="navbar-brand" href="/"><img src="{{ asset('asset/images/logo.png') }}" alt=""></a>
+                  <a class="navbar-brand" href="/"><img src="{{ asset('assets/images/logo.png') }}" alt=""></a>
                  {{ form_start(form, { 'attr': {'action': path('results')} }) }}
                 {{ form_widget(form) }}
                 {{ form_end(form) }}
