--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,9 +11,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <link href="{{ asset('asset/css/style.css') }}" rel="stylesheet" >
+        <link href="{{ asset('asset/css/menu.css') }}" rel="stylesheet" >
         <link rel="icon" type="image/x-icon" href="{{ asset('asset/images/favicon.png') }}" />
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
-        
+        <link href="{{ asset('asset/css/bulma/bulma.css') }}" rel="stylesheet" >
+        <link href="{{ asset('asset/css/bulma/bulma.min.css') }}" rel="stylesheet" >
          {{ render(controller(
         'AppBundle:Default:menu'
         
